<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListasCompra"
    android:background="@color/bg_dark_color">



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="76dp"
                android:layout_height="131dp"


                android:layout_marginEnd="60dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/average_sans"
                android:hint="@string/prod_lis_hint"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/AppTheme.Picker"
                app:layout_constraintBottom_toTopOf="@+id/btnGuardarProd"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etNomProd"
                android:layout_width="185dp"
                android:layout_height="45dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="68dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/average_sans"
                android:hint="@string/prod_lis_hint"
                android:inputType="text"
                android:textColor="@color/calendar_fg_dark_color"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/numberPicker"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnGuardarProd"
                android:layout_width="179dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="168dp"
                android:backgroundTint="#72C34F"
                android:text="@string/btnGuardarProd"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnBorrarProd"
                android:layout_width="178dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#C13434"
                android:text="@string/btnEliminarProd"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/btnBorrarTodosProds"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnBorrarTodosProds"
                android:layout_width="260dp"
                android:layout_height="45dp"
                android:layout_marginStart="72dp"
                android:layout_marginBottom="56dp"
                android:backgroundTint="#C13434"
                android:text="@string/btnEliminarTodosProd"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView3"
                android:layout_width="176dp"
                android:layout_height="389dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_border"
                app:layout_constraintBottom_toTopOf="@+id/btnBorrarProd"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/verProductos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/titulo_lis"
                android:textColor="@color/calendar_fg_dark_color"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/etNomProd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/productos"
                android:textColor="@color/calendar_fg_dark_color"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/scrollView3"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>